fixed layoutshift

--- a/src/sass/Hero.scss
+++ b/src/sass/Hero.scss
@@ -28,8 +28,13 @@ div {
   }
 
   .hero-img--size {
+    width: 100vw;
+    height: 45rem;
+    background-color: $secondaryColor;
     img {
-      width: 100%;
+      width: 100vw;
+      height: 100%;
+      object-fit: cover;
     }
   }
 }
